Global who knows and botted account handling